fix: Improve spacing around the title in the callout boxes in css/styles.css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,10 +70,16 @@ div.callout-note.callout {
 }
 
 .callout.callout-style-simple>div.callout-header {
-  border-bottom: none;
   font-size: 0.9rem;
   font-weight: 600;
   opacity: 100% !important;
+}
+
+.callout.callout-titled .callout-body> :last-child:not(.sourceCode),
+.callout.callout-titled .callout-body>div> :last-child:not(.sourceCode) {
+  padding-bottom: 0.5rem;
+  margin-bottom: 0;
+  margin-top: 1em;
 }
 
 div.quarto-post a {
